Reverted some PMD, Checkstyle changes.
SVN-Revision: 17877